objects/Recorded_Information__c.object
<CustomObject>
    <fields>
        <fullName>Applicant1_Name__c</fullName>
        <label>ZZZ Applicant 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant2_Name_c__c</fullName>
        <label>ZZZ Applicant 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant2_Name_del__c</fullName>
        <label>ZZZ Applicant 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ZZZ Applicant2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Recorded Informations (Applicant2)</relationshipLabel>
        <relationshipName>Recorded_Informations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Applicant3_Name__c</fullName>
        <label>ZZZ Applicant 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ZZZ Applicant3</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Recorded Informations (Applicant3)</relationshipLabel>
        <relationshipName>Recorded_Informations2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Applicant_1_Name__c</fullName>
        <description>Pulls name from Application 1. Contains middle initial. Used in all Nintex Docs in all signature blocks. Do not delete. AM</description>
        <formula>IF(!ISBLANK(  Application__r.Applicant_Middle_Name__c ),Application__r.First_Name__c + " " + Application__r.Applicant_Middle_Name__c + " " + Application__r.Last_Name__c,Application__r.First_Name__c + " " + Application__r.Last_Name__c)</formula>
        <inlineHelpText>Pulls name from Application 1. Contains middle initial. Used in all Nintex Docs in all signature blocks. Do not delete. AM</inlineHelpText>
        <label>Applicant 1 Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_2_Name__c</fullName>
        <description>Pulls name from Application 2. Contains middle initial. Used in all Nintex Docs in all signature blocks. Do not delete. AM</description>
        <formula>IF(!ISBLANK(  Application_2__r.Applicant_Middle_Name__c  ), Application_2__r.First_Name__c  + " " + Application_2__r.Applicant_Middle_Name__c + " " +  Application_2__r.Last_Name__c ,Application_2__r.First_Name__c  + " " + Application_2__r.Last_Name__c)</formula>
        <inlineHelpText>Pulls name from Application 2. Contains middle initial. Used in all Nintex Docs in all signature blocks. Do not delete. AM</inlineHelpText>
        <label>Applicant 2 Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_3_Name__c</fullName>
        <description>Pulls name from Application 3. Contains middle initial. Used in all Nintex Docs in all signature blocks. Do not delete. AM</description>
        <formula>IF(!ISBLANK(   Application_3__r.Applicant_Middle_Name__c  ), Application_3__r.First_Name__c   + " " + Application_3__r.Applicant_Middle_Name__c + " " +  Application_2__r.Last_Name__c ,Application_3__r.First_Name__c   + " " + Application_3__r.Last_Name__c)</formula>
        <inlineHelpText>Pulls name from Application 3. Contains middle initial. Used in all Nintex Docs in all signature blocks. Do not delete. AM</inlineHelpText>
        <label>Applicant 3 Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_Documents_Names2__c</fullName>
        <description>Used in Nintex packages</description>
        <formula>IF(!ISBLANK( Application__r.First_Name__c ) , Applicant_1_Name__c, NULL ) + ' ' + 

IF(!ISBLANK( Application__r.First_Name_Co__c ) , 'AND' + ' ' + Co_Applicant_1_Name__c,NULL) + ' ' + 

IF(!ISBLANK( Application_2__r.First_Name__c ) , 'AND' + ' ' + Applicant_2_Name__c,NULL) + ' ' + 

IF(!ISBLANK( Application_2__r.First_Name_Co__c ), 'AND' + ' ' + Co_Applicant_2_Name2__c,NULL) + ' ' + 

IF(!ISBLANK( Application_3__r.First_Name__c ) , 'AND' + ' ' + Applicant_3_Name__c,NULL) + ' ' + 

IF(!ISBLANK( Application_3__r.First_Name_Co__c ) , 'AND' + ' ' + Co_Applicant_3_Name__c,NULL) + ' ' + 

IF(!ISBLANK( Application_4__r.First_Name__c ) , 'AND' + ' ' + Applicant_4_Name__c,NULL) + ' ' + 

IF(!ISBLANK( Application_4__r.First_Name_Co__c ), 'AND' + ' ' + Co_Applicant_4_Name__c,NULL)</formula>
        <label>Applicant Documents Names</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_Names_Nintex__c</fullName>
        <description>Created for Nintex. String of Applicant names with lowercase 'and' versus 'AND' (legal format)</description>
        <formula>IF(!ISBLANK(  Application__r.First_Name__c ) , Applicant_1_Name__c, NULL ) + ' ' + 

IF(!ISBLANK( Application__r.First_Name_Co__c ) , 'and' + ' ' + Co_Applicant_1_Name__c,NULL) + ' ' + 

IF(!ISBLANK(  Application_2__r.First_Name__c  ) , 'and' + ' ' + Applicant_2_Name__c,NULL) + ' ' + 

IF(!ISBLANK( Application_2__r.First_Name_Co__c ), 'and' + ' ' + Co_Applicant_2_Name2__c,NULL) + ' ' + 

IF(!ISBLANK(  Application_3__r.First_Name__c ) , 'and' + ' ' + Applicant_3_Name__c,NULL) + ' ' + 

IF(!ISBLANK(  Application_3__r.First_Name_Co__c  ) , 'and' + ' ' + Co_Applicant_3_Name__c,NULL) + ' ' + 

IF(!ISBLANK(  Application_4__r.First_Name__c ) , 'and' + ' ' + Applicant_4_Name__c,NULL) + ' ' + 

IF(!ISBLANK(  Application_4__r.First_Name_Co__c  ), 'and' + ' ' + Co_Applicant_4_Name__c,NULL)</formula>
        <label>Applicant Document Names - Greeting</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_Trust_Signature__c</fullName>
        <label>Applicant Trust Signature</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Applicant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ZZZ Applicant</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Recorded Informations</relationshipLabel>
        <relationshipName>Recorded_Informations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application 2</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Recorded Informations (Application 2)</relationshipLabel>
        <relationshipName>Recorded_Informations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application 3</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Recorded Informations (Application 3)</relationshipLabel>
        <relationshipName>Recorded_Informations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application_4__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application 4</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Recorded Informations (Application 4)</relationshipLabel>
        <relationshipName>Recorded_Informations2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Recorded Informations (Application)</relationshipLabel>
        <relationshipName>Recorded_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AssignmentBook__c</fullName>
        <label>ZZZ Assignment: Book #</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssignmentInstrument__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Assignment: Instrument #</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AssignmentRecordedDate__c</fullName>
        <label>Assignment: Recorded Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assignment_Acknowledgement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ZZZ Assignment: Acknowledgement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>California_Trust_Applicant_Signed__c</fullName>
        <description>Nintex - HB Closing Package if customer is HB, not OR or WA, and has Trust Signatures</description>
        <formula>AND(
Opportunity__r.Record_Type_Name__c = "HomeBuyer", 
(Property_State__c &lt;&gt; "OR"),
(Property_State__c &lt;&gt; "WA"),

OR(
NOT(ISBLANK(Applicant_Trust_Signature__c)),
NOT(ISBLANK(Co_Applicant_Trust_Signature__c))
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Nintex - HB Closing Package if customer is HB, not OR or WA, and has Trust Signatures</inlineHelpText>
        <label>Trust Rider (HB - Multi)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Certified_Copy_Assignment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Homeowner</description>
        <label>ZZZ Certified Copy - Assignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Certified_Copy_Security_Instrument__c</fullName>
        <defaultValue>false</defaultValue>
        <description>HomeOwner. Also need Riders, in addition to Security Instrument.</description>
        <label>ZZZ Certified Copy - Security Instrument</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Certified_Copy_of_Subordinate_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ZZZ HB - Cert. Copy of Subordinate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Certified_Copy_of_Unison_HO_Memorandum_o__c</fullName>
        <defaultValue>false</defaultValue>
        <description>HomeOwner</description>
        <label>ZZZ Certified Copy - Memorandum of</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Co_Applicant3_Name__c</fullName>
        <label>ZZZ Co-Applicant 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Applicant3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ZZZ Co-Applicant3</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Recorded Informations (Co-Applicant3)</relationshipLabel>
        <relationshipName>Recorded_Informations5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Co_Applicant_1_Name__c</fullName>
        <description>Pulls name from Application 1. Contains middle initial. Used in all Nintex Docs in all signature blocks. Do not delete. AM</description>
        <formula>IF(!ISBLANK(  Application__r.Co_Applicant_Middle_Name__c  ),  

Application__r.First_Name_Co__c   + " " + Application__r.Co_Applicant_Middle_Name__c + " " + Application__r.Last_Name_Co__c, 

Application__r.First_Name_Co__c+" "+Application__r.Last_Name_Co__c)</formula>
        <inlineHelpText>Pulls name from Application 1. Contains middle initial. Used in all Nintex Docs in all signature blocks. Do not delete. AM</inlineHelpText>
        <label>Co-Applicant 1 Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Applicant_2_Name2__c</fullName>
        <description>Pulls name from Application 2. Contains middle initial. Used in all Nintex Docs in all signature blocks. Do not delete. AM</description>
        <formula>IF(!ISBLANK(   Application_2__r.Co_Applicant_Middle_Name__c   ),  

Application_2__r.First_Name_Co__c   + " " + Application_2__r.Co_Applicant_Middle_Name__c  + " " +  Application_2__r.Last_Name_Co__c ,

Application_2__r.First_Name_Co__c+" "+ Application_2__r.Last_Name_Co__c)</formula>
        <inlineHelpText>Pulls name from Application 2. Contains middle initial. Used in all Nintex Docs in all signature blocks. Do not delete. AM</inlineHelpText>
        <label>Co-Applicant 2 Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Applicant_3_Name__c</fullName>
        <description>Pulls name from Application 3. Contains middle initial. Used in all Nintex Docs in all signature blocks. Do not delete. AM</description>
        <formula>IF(!ISBLANK(   Application_3__r.Co_Applicant_Middle_Name__c ),  Application_3__r.First_Name_Co__c + " " +  Application_3__r.Co_Applicant_Middle_Name__c + " " +  Application_3__r.Last_Name_Co__c ,Application_3__r.First_Name_Co__c + " " + Application_3__r.Last_Name_Co__c)</formula>
        <inlineHelpText>Pulls name from Application 3. Contains middle initial. Used in all Nintex Docs in all signature blocks. Do not delete. AM</inlineHelpText>
        <label>Co-Applicant 3 Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Applicant_Name__c</fullName>
        <label>ZZZ Co-Applicant 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Applicant_Trust_Signature__c</fullName>
        <label>Co-Applicant Trust Signature</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Co_Applicant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ZZZ Co-Applicant</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Recorded Informations (Co-Applicant)</relationshipLabel>
        <relationshipName>Recorded_Informations3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Property_State__c</fullName>
        <label>Contract Property State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>District of Columbia</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Jersey</fullName>
                </value>
                <value>
                    <fullName>New York</fullName>
                </value>
                <value>
                    <fullName>North Carolina</fullName>
                </value>
                <value>
                    <fullName>Ohio</fullName>
                </value>
                <value>
                    <fullName>Oregon</fullName>
                </value>
                <value>
                    <fullName>Pennsylvania</fullName>
                </value>
                <value>
                    <fullName>Tennessee</fullName>
                </value>
                <value>
                    <fullName>Virginia</fullName>
                </value>
                <value>
                    <fullName>Washington</fullName>
                </value>
                <value>
                    <fullName>Wisconsin</fullName>
                </value>
                <value>
                    <fullName>South Carolina</fullName>
                </value>
                <value>
                    <fullName>Utah</fullName>
                </value>
                <value>
                    <fullName>New Mexico</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Corporate_Affiliate__c</fullName>
        <description>See PB: Recorded Information: Property State Changed or Created</description>
        <inlineHelpText>Populates 'Unison Agreement Corp.' when state is selected. Referenced in closing documents.</inlineHelpText>
        <label>Corporate Affiliate</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corporate_Entity_State__c</fullName>
        <description>See PB: Recorded Information: Property State Changed or Created</description>
        <inlineHelpText>Populates 'Delaware' when state is selected. Referenced in closing documents.</inlineHelpText>
        <label>Corporate Entity State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corporate_Entity__c</fullName>
        <description>See PB: Recorded Information: Property State Changed or Created</description>
        <inlineHelpText>Populates 'Unison Agreement Corp.' when state is selected. Referenced in closing documents.</inlineHelpText>
        <label>Corporate Entity</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Courier_Fee_due_to__c</fullName>
        <label>Courier Fee due to</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Final_Vesting__c</fullName>
        <description>EOS &lt;&gt; Orissa Sync.</description>
        <inlineHelpText>Syncs to Orissa</inlineHelpText>
        <label>Customer Final Vesting</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Initial_Vesting__c</fullName>
        <label>Customer Initial Vesting</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customers_Gain_loss_on_their_home_0__c</fullName>
        <description>Nintex - Revised Offer Package - "Your Gain (loss) on your home alongside Unison"</description>
        <formula>Future_Value_No_Change2__c  - Opportunity__r.Final_OAV_Calculation__c -   Unison_Gain_Loss_5__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Future Home Value at Termination (Unchanged) minus Final OAV minus Unison Gain/Loss on Investment</inlineHelpText>
        <label>Customers Gain (loss) on their home_0</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customers_Gain_loss_on_their_home_12__c</fullName>
        <description>Nintex - Revised Offer Package - "Your Gain (loss) on your home alongside Unison"</description>
        <formula>Future_Value_minus_12_IP__c  - Opportunity__r.Final_OAV_Calculation__c -   Unison_Gain_Loss_3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Future Home Value at Termination (-12%) minus Final OAV minus Unison Gain/Loss on Investment</inlineHelpText>
        <label>Customers Gain (loss) on their home - 12</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customers_Gain_loss_on_their_home_25__c</fullName>
        <description>Nintex - Revised Offer Package - "Your Gain (loss) on your home alongside Unison"</description>
        <formula>Future_Value_minus_25_Pct__c  - Opportunity__r.Final_OAV_Calculation__c -   Unison_Gain_Loss_4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Future Home Value at Termination (-25%) minus Final OAV minus Unison Gain/Loss on Investment</inlineHelpText>
        <label>Customers Gain (loss) on their home - 25</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customers_Gain_loss_on_their_home_plus12__c</fullName>
        <description>Nintex - Revised Offer Package - "Your Gain (loss) on your home alongside Unison"</description>
        <formula>Future_Value_plus_12__c  - Opportunity__r.Final_OAV_Calculation__c -   Unison_Gain_Loss1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Future Home Value at Termination (+12%) minus Final OAV minus Unison Gain/Loss on Investment</inlineHelpText>
        <label>Customers Gain (loss) on their home + 12</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DMA_Addendum_to_the_Unison_HO_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ZZZ DMA Addendum to the Unison HO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DOT_or_Mortgage_Instrument_No__c</fullName>
        <label>DOT or Mortgage Instrument No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOT_or_Mortgage_Recorded_Date__c</fullName>
        <label>DOT or Mortgage Recorded Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DeedInstrument__c</fullName>
        <label>ZZZ Deed: Instrument #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deed_Acknowledgement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ZZZ Deed: Acknowledgement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deed_Recorded_Date__c</fullName>
        <label>ZZZ Deed: Recorded Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Document_Status_Wire_Instructions__c</fullName>
        <label>ZZZ Document Status Wire Instructions</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>needed</fullName>
                </value>
                <value>
                    <fullName>received</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dot_or_Mortgage__c</fullName>
        <label>Dot or Mortgage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Deed of Trust</fullName>
                </value>
                <value>
                    <fullName>Deed of Trust (Non-Recourse)</fullName>
                </value>
                <value>
                    <fullName>Mortgage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Escrow_Address__c</fullName>
        <description>Created for EOS HB team to quickly add/edit HB Contacts. Used in Nintex - Closing Instructions in HB Closing Documents.</description>
        <inlineHelpText>Please enter company address as it should read on the HB Closing Documents. This information appears on the first page of the Closing Instructions.</inlineHelpText>
        <label>Escrow - Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Escrow_Business_Entity__c</fullName>
        <description>Created for EOS HB team to quickly add/edit HB Contacts. Used in Nintex - Closing Instructions in HB Closing Documents.</description>
        <inlineHelpText>Please enter escrow company name as it should read on the HB Closing Documents. This information appears on the first page of the Closing Instructions.</inlineHelpText>
        <label>Escrow - Business Entity</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Escrow_Email__c</fullName>
        <description>Created for EOS HB team to quickly add/edit HB Contacts. Used in Nintex - Closing Instructions in HB Closing Documents.</description>
        <inlineHelpText>Please enter email address as it should read on the HB Closing Documents. This information appears on the first page of the Closing Instructions.</inlineHelpText>
        <label>Escrow - Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Escrow_First_Name__c</fullName>
        <description>Created for EOS HB team to quickly add/edit HB Contacts. Used in Nintex - Closing Instructions in HB Closing Documents.</description>
        <inlineHelpText>Please enter name as it should read on the HB Closing Documents. This information appears on the first page of the Closing Instructions.</inlineHelpText>
        <label>Escrow - First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Escrow_Last_Name__c</fullName>
        <description>Created for EOS HB team to quickly add/edit HB Contacts. Used in Nintex - Closing Instructions in HB Closing Documents.</description>
        <inlineHelpText>Please enter name as it should read on the HB Closing Documents. This information appears on the first page of the Closing Instructions.</inlineHelpText>
        <label>Escrow - Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Escrow_Phone__c</fullName>
        <description>Created for EOS HB team to quickly add/edit HB Contacts. Used in Nintex - Closing Instructions in HB Closing Documents.</description>
        <inlineHelpText>Please enter phone number as it should read on the HB Closing Documents. This information appears on the first page of the Closing Instructions.</inlineHelpText>
        <label>Escrow - Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Est_Document_Execution__c</fullName>
        <label>ZZZ Est Document Execution</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Recording_Date__c</fullName>
        <label>ZZZ Estimated Recording Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exclude_Memorandum_Multi_HB__c</fullName>
        <formula>IF(
AND(
Opportunity__r.RecordType.Name ='HomeBuyer',
OR(
Property_State__c = 'DC' ,
Property_State__c = 'CT' ,
Property_State__c = 'FL' ,
Property_State__c = 'GA' ,
Property_State__c = 'MA' ,
Property_State__c = 'MD' ,
Property_State__c = 'MI' ,
Property_State__c = 'NC' ,
Property_State__c = 'NY' ,
Property_State__c = 'SC' ,
Property_State__c = 'VA' ,
Property_State__c = 'WA'
)
),
TRUE ,
FALSE
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exclude Memorandum Multi - HB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exclude_Memorandum_Multi_HO__c</fullName>
        <formula>IF( 
  AND(
      Opportunity__r.RecordType.Name ='HomeOwner',
    OR(
        Property_State__c = 'KY' ,
        Property_State__c = 'DC' ,
        Property_State__c = 'CT' ,
        Property_State__c = 'WI' ,
        Property_State__c = 'FL' ,
        Property_State__c = 'GA' ,
        Property_State__c = 'IL' ,
        Property_State__c = 'MA' ,
        Property_State__c = 'MD' ,
        Property_State__c = 'MI' ,
        Property_State__c = 'NC' ,
        Property_State__c = 'NY' ,
        Property_State__c = 'SC' ,
        Property_State__c = 'VA' ,
        Property_State__c = 'WA' 
)
),
    TRUE ,
    FALSE
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exclude Memorandum Multi - HO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fund_Account_Number__c</fullName>
        <label>Fund Account Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fund_Name__c</fullName>
        <label>Fund Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Odin US Residential Real Estate Fund I LP</fullName>
                </value>
                <value>
                    <fullName>Odin Residential Real Estate Fund LP</fullName>
                </value>
                <value>
                    <fullName>Odin New Horizon Real Estate Fund LP</fullName>
                </value>
                <value>
                    <fullName>Unison Midgard Holdings LLC</fullName>
                    <default>true</default>
                    <label>Unison Midgard Holdings LLC</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fund_Number__c</fullName>
        <label>Fund Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Funding_Date__c</fullName>
        <label>ZZZ Funding Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Future_Value_No_Change2__c</fullName>
        <description>Used in Nintex Important Information Notice in HB CAP and HO Offer Letter</description>
        <formula>Opportunity__r.Final_OAV_Calculation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>OAV</inlineHelpText>
        <label>Future Value - No Change</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Future_Value_minus_12_IP__c</fullName>
        <description>Used in Nintex Important Information Notice in HB CAP and HO Offer Letter</description>
        <formula>Opportunity__r.Final_OAV_Calculation__c  * 0.88</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>OAV * .88</inlineHelpText>
        <label>Future Value -12%</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Future_Value_minus_12_x_IP__c</fullName>
        <description>Used in Nintex Important Information Notice in HB CAP and HO Offer Letter</description>
        <formula>(Opportunity__r.Final_OAV_Calculation__c  * 0.88) *  Opportunity__r.Investor_Percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Future Value minus 12% (multiplied by Investor %)</inlineHelpText>
        <label>Future Value (-12%) x Investor %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Future_Value_minus_25_Pct__c</fullName>
        <description>Used in Nintex Important Information Notice in HB CAP and HO Offer Letter</description>
        <formula>Opportunity__r.Final_OAV_Calculation__c * 0.75</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>OAV * .75</inlineHelpText>
        <label>Future Value -25%</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Future_Value_minus_25_x_IP__c</fullName>
        <description>Used in Nintex Important Information Notice in HB CAP and HO Offer Letter</description>
        <formula>(Opportunity__r.Final_OAV_Calculation__c  * 0.75) *  Opportunity__r.Investor_Percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Future Value minus 25% (multiplied by Investor %)</inlineHelpText>
        <label>Future Value (-25%) x Investor %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Future_Value_plus_12__c</fullName>
        <description>Used in Nintex Important Information Notice in HB CAP and HO Offer Letter</description>
        <formula>Opportunity__r.Final_OAV_Calculation__c   * 1.12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Future Value +12%</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Future_Value_plus_12_x_IP__c</fullName>
        <description>Used in Nintex Important Information Notice in HB CAP and HO Offer Letter</description>
        <formula>( Opportunity__r.Final_OAV_Calculation__c  * 1.12) *  Opportunity__r.Investor_Percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Future Value plus 12% (multiplied by Investor %)</inlineHelpText>
        <label>Future Value (+12%) x Investor %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Future_Value_plus_40__c</fullName>
        <description>Used in Nintex Important Information Notice in HB CAP and HO Offer Letter</description>
        <formula>Opportunity__r.Final_OAV_Calculation__c   *1.4</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Future Value +40%</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Future_Value_plus_40_x_IP__c</fullName>
        <description>Used in Nintex Important Information Notice in HB CAP and HO Offer Letter</description>
        <formula>(Opportunity__r.Final_OAV_Calculation__c   * 1.4) *  Opportunity__r.Investor_Percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Future Value plus 40% (multiplied by Investor %)</inlineHelpText>
        <label>Future Value (+40%) x Investor %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>